<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
        <LinearLayout
            android:background="@drawable/orange_gradient"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="10dp">
            <ImageButton
                android:layout_marginVertical="12dp"
                android:id="@+id/toSettings"
                android:layout_width="18dp"
                android:layout_height="27dp"
                android:layout_weight="1"
                android:background="@drawable/setting_button"
                />
             <TextView
                 android:layout_marginVertical="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/project_trtpo"
                 android:gravity="center"
                 android:textSize="24sp"
                 android:layout_weight="5"/>

            <ImageButton
                android:id="@+id/ToStatistic"
                android:layout_width="25dp"
                android:layout_height="31dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="1"
                android:background="@drawable/stats_button"
                android:onClick="GotoStatistics" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/Yesterday"
                android:layout_width="14dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_arrowbutton"
                android:onClick="toPreviosDay"
                android:contentDescription="TODO" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="7"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:id="@+id/NumGroupTableActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Гр.630501"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/DateTableActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18.06.1999"
                    android:textSize="12sp"
                    android:gravity="center"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/nextDay"
                android:layout_width="12dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="toNextDay"
                android:background="@drawable/next_arrowbutton" />
        </LinearLayout>
        <TableLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginHorizontal="15dp"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle">

            <TableRow
                >

                <TextView
                    android:layout_width="79dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:text="@string/Startlesson"
                    android:textSize="17sp" />

                <TextView
                    android:layout_margin="15dp"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:text="@string/NameLesson"
                    android:textSize="20sp" />
            </TableRow>



        </TableLayout>
    <ListView
        android:id="@+id/ListSubjectInfo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    </LinearLayout>
